Novo teste ConsultAssistiveAcessory

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="htmlhead">
         <link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" />
-        <link type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
-        <link type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+        <link type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet"/>
+        <link type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet"/>
    		<link type="text/css" rel="stylesheet" th:href="@{/css/form.assistive.accessory.css}" />
     </head>
     <body>
