--- a/src/main/resources/templates/catalog/accessoryList.html
+++ b/src/main/resources/templates/catalog/accessoryList.html
@@ -7,7 +7,7 @@
 	<link type="text/css" rel="stylesheet" th:href="@{/css/accessoryList.css}" />
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<img src="/image/logoColab.jpg" class="logo">
+		<img src="/image/logoColab.jpg" class="logo"/>
 			<div class="container-fluid" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active"></li>
@@ -35,7 +35,7 @@
 			
 			<div class="row">
 				<div class="card col-xs-12 col-sm-4 col-md-3 col-lg-2"  th:each="umaccessory : ${umitem.value}">
-					<img class="card-img-top" src="/image/item.png" alt="Card image cap">
+					<img class="card-img-top" src="/image/item.png" alt="Card image cap"/>
 					<div class="card-body">
 						<h5 class="card-text" th:text="${umaccessory.name}"></h5>
 						<p class="card-title" th:text="${umaccessory.description}"></p>
