--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,7 +3,7 @@
 	<head th:include="layout :: htmlhead"></head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				<img src="/image/logoColab.jpg" class="logo">
+				<img src="/image/logoColabmini.jpg">
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item active"></li>
