--- a/src/main/resources/templates/catalog/shoppingCart.html
+++ b/src/main/resources/templates/catalog/shoppingCart.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<img src="/image/logoColab.jpg" class="logo">
+			<img src="/image/logoColabmini.jpg">
 			<div class="container-fluid" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active"></li>
