--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 	<link type="text/css" rel="stylesheet" th:href="@{/css/accessoryList.css}" />
 	<body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<img src="/image/logoColab.jpg" class="logo">
+			<img src="/image/logoColabmini.jpg">
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item active"></li>
