--- a/src/main/resources/templates/user/form.html
+++ b/src/main/resources/templates/user/form.html
@@ -47,6 +47,12 @@
 						class="form-control" id="txtcrmCrefito" placeholder="Número"
 						th:field="*{crmCrefito}">
 					</div>
+					<div class="form-group">
+                        <label for="slccolor">Instituições</label>
+                        <select class="form-control" id="slcinstitution" th:field="*{institutionList}" multiple="true">
+                            <option th:each="oneinst : ${listInstitution}" th:value="${oneinst.id}" th:text="${oneinst.name}"></option>
+                        </select>
+                    </div>
                     <div class="form-group">                    
 	                    <label for="slcEnabledUser">Usuario ativo?</label><br>
 	                    <select class="form-control" id="slcEnabledUser" th:field="*{enabled}">
