--- a/src/main/resources/templates/reportorderstatus/index.html
+++ b/src/main/resources/templates/reportorderstatus/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head th:include="layout :: htmlhead">
     	<meta charset="UTF-8"/>
@@ -63,5 +63,67 @@
                 })
            /*]]>*/
         </script> 
+    </body>
+</html> -->
+
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+	<head th:include="layout :: htmlhead"><meta charset="UTF-8"></head>
+    <body>
+        <nav th:replace="layout :: menu">(menu)</nav>
+        <div class="container">
+        	<h2>Status das ordens de serviço</h2>
+        	    
+        	    <div class="form-group">
+                    <label for="txtname">Código do pedido</label>
+                    <input type="text" disabled="disabled" class="form-control" th:field="*{orderstatus.id}" >
+                </div>
+                
+            <div class="border border-dark" th:object="${orderRequest}">
+                
+                <div class="form-group">
+                    <label for="txtname">Data de atualização de status</label>
+                    <input type="text" disabled="disabled" class="form-control" th:field="*${#dates.format(requestbase.requestDate, 'dd/MM/yyyy HH:mm')}" >
+                </div>
+                
+                <div class="form-group">
+                    <label for="txtname">Status</label>
+                    <input type="text" disabled="disabled" class="form-control" th:field="*{status}" >
+                </div>
+                
+				<div class="card px-0">
+				    <div class="card-header">Histórico</div>
+				    <div class="card-body">
+				    	<table class="table">
+		                    <thead class="thead-light"> 
+		                        <tr>
+		                            <th scope="col">Data</th>
+		                            <th scope="col">Usuário Responsável</th>
+		                            <th scope="col">Novo Status</th>
+		                        </tr>
+		                    </thead>
+		                    <tbody>
+		                        <tr scope="row" th:each="item : *{orderStatusLogList}">
+		                            <td th:text="${item.date}"></td>
+		                            <td th:if="${item.user != null}" th:text="${item.user.name}"></td>
+		                            <td th:if="${item.user == null}">Não definido</td>
+		                            <td>
+		                            	<ul class="list-unstyled">
+								            <li th:if="${item.statusLog == 20}">Em Produção</li>
+								            <li th:if="${item.statusLog == 30}">Pronto</li>
+								            <li th:if="${item.statusLog == 40}">Entregue</li>
+								            <li th:if="${item.statusLog == 50}">Finalizado</li>
+								        </ul>
+		                            </td>
+		                        </tr>
+		                    </tbody>
+		                </table>
+				    </div>
+				</div>
+					    
+                <a href="/orderstatus" class="btn btn-primary">Retornar</a>
+            </div>
+        </div>	
+        <div th:include="layout :: footer" id="footer">(footer)</div>
     </body>
 </html>
