--- a/src/main/resources/templates/catalog/about.html
+++ b/src/main/resources/templates/catalog/about.html
@@ -14,7 +14,7 @@
 					
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="/MyList"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
+					<li><a href="/mylist"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a></li>
 				</ul>
 			</div>
 			<a class="nav-link" href="/register">Registrar Usuário</a>
