--- a/src/main/resources/templates/orderstatususer/list.html
+++ b/src/main/resources/templates/orderstatususer/list.html
@@ -3,9 +3,24 @@
     <meta charset="UTF-8">
     <head th:include="layout :: htmlhead"></head>
     <body>
-		<nav th:replace="layout :: menu">(menu)</nav>
+	    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<img src="/image/logoColabmini.jpg">
+				<div class="container-fluid" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item active"></li>
+						<li class="navbar-brand">Catálogo de Acessórios</li>
+						
+					</ul>
+				</div>
+				<a class="nav-link" href="/">Home</a>
+				<a class="nav-link" href="/register">Registrar Usuário</a>
+				<a class="nav-link" href="/admin">Admin</a>
+				<a class="nav-link" href="/about">Sobre</a>
+				<form th:action="@{/logout}" method="post">
+			            <input type="submit" value="Sair" class="btn"/>
+			        </form>	
+			</nav>
         <div class="container">
-            
             <h2>Ordem de serviço pendentes</h2>
             <div class="border border-dark">
                 <table class="table">
@@ -46,8 +61,7 @@
                             <td th:text="${#lists.size(order.itensList)}"></td>
                             
                             <td>
-                                <a href="form.html" th:href="@{'/orderstatus/detail/' + ${order.id}}" class="btn btn-secondary btn-lg" role="button">Detalhar</a>
-                                <a href="form.html" th:href="@{'/orderstatus/change/' + ${order.id}}" class="btn btn-warning btn-lg" role="button">Atualizar Status</a>
+                                <a href="form.html" th:href="@{'/orderstatususer/detail/' + ${order.id}}" class="btn btn-secondary btn-lg" role="button">Detalhar</a>
                             </td>
                         </tr>
                     </tbody>
@@ -92,8 +106,7 @@
                             <td th:text="${#lists.size(order.itensList)}"></td>
                             
                             <td>
-                                <a href="form.html" th:href="@{'/orderstatus/detail/' + ${order.id}}" class="btn btn-secondary btn-lg" role="button">Detalhar</a>
-                                <a href="form.html" th:href="@{'/orderstatus/change/' + ${order.id}}" class="btn btn-warning btn-lg" role="button">Atualizar Status</a>
+                                <a href="form.html" th:href="@{'orderstatususer/detail/' + ${order.id}}" class="btn btn-secondary btn-lg" role="button">Detalhar</a>
                             </td>
                         </tr>
                     </tbody>
